trocando fonte e tamanho de fonte do documento

--- a/css/clientes.css
+++ b/css/clientes.css
@@ -1,3 +1,8 @@
+* {
+    font-size: 12px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .fsborder {
     border: ridge 2pt;
     border-radius: 10pt;
