--- a/css/produtos.css
+++ b/css/produtos.css
@@ -3,10 +3,17 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+#btnscancel,
+#inputimg {
+    border: 0;
+    border-radius: 0;
+}
+
 fieldset {
     display: inline-block;
     border: ridge 2pt;
-    border-radius: 10pt;
+    border-radius: 0 0 0 10pt;
+    padding: 5pt;
 }
 
 #fscadastro {
@@ -30,6 +37,7 @@ fieldset {
 }
 
 input {
+    border: ridge;
     border-radius: 10px;
 }
 
