--- a/css/fornecedor.css
+++ b/css/fornecedor.css
@@ -3,32 +3,22 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#btnscancel,
-#inputimg {
-    border: 0;
-    border-radius: 0;
+.fsborder,
+#fs1 {
+    padding: 10pt;
+    border: ridge 2pt;
+    border-radius: 0 0 0 10pt;
 }
 
 fieldset {
     display: inline-block;
-    border: ridge 2pt;
-    border-radius: 0 0 0 10pt;
-    padding: 5pt;
-}
-
-#fscadastro {
-    border: 0;
-}
-
-.fsclass {
-    background-color: white;
 }
 
 #nav1, #nav2, #nav3, #nav4, #nav5 {
     background-color: #175873;
 }
-
-#nav1:hover, #nav2:hover, #nav4:hover, #nav5:hover {
+ 
+#nav1:hover, #nav3:hover, #nav4:hover, #nav5:hover {
     background-color: #2B7C85;
 }
 
@@ -38,12 +28,15 @@ input {
 }
 
 .btn,
-.btn {
+#btnconsultarcnpj,
+#btnsub {
     background-color: #175873;
     color: white;
 }
 
-.btn:hover {
+.btn:hover,
+#btnconsultarcnpj:hover,
+#btnsub:hover {
     background-color: #2B7C85;
     color: white;
 }
