--- a/css/style.css
+++ b/css/style.css
@@ -8,18 +8,18 @@
 #fs1 {
     padding: 10pt;
     border: ridge 2pt;
-    border-radius: 0 0 0 10pt;
+    border-radius: 0 10pt 0 10pt;
 }
 
 fieldset {
     display: inline-block;
 }
 
-#nav1, #nav2, #nav3, #nav4, #nav5 {
+#nav1, #nav2, #nav3, #nav4{
     background-color: #175873;
 }
 
-#nav2:hover, #nav3:hover, #nav4:hover, #nav5:hover {
+#nav2:hover, #nav3:hover, #nav4:hover {
     background-color: #2B7C85;
 }
 
